--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
           <img src="./img/school.png" alt="프로필">
         </div>
         <div class="pro_text">
-          <p>2013년 강동초 졸업</p>
-          <p>2016년 강동중 졸업</p>
-          <p>2019년 대구 경일여고 졸업</p>
-          <p>2021년 ~ 경북대 모바일공학과</p>
+          <p>2014년 강동초 졸업</p>
+          <p>2017년 강동중 졸업</p>
+          <p>2020년 대구 경일여고 졸업</p>
+          <p>2021년 경북대 모바일공학과 입학</p>
         </div>
       </div>
 
